--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     }
 
     loadStatus();
-    setInterval(loadStatus, 180000); // Refresh every 3 minutes
+    setInterval(loadStatus, 180000); // refresh every 3 minutes
   </script>
 </body>
 </html>
